# cloudflare-ddns

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  sources.toml
.cargo/: config.toml
.github/workflows/: publish-release.yml  tests.yml
config/: config.toml
default/: api.toml  config.toml  http.toml  misc.toml
includes/: api.toml  cloudflare-ddns.service  json_sources  macos_launchd.plist  plaintext_sources
modules/ddns-wasm-runtime/: Cargo.toml
modules/ddns-wasm-runtime/src/: main.rs  pipe.rs
modules/ip_macro/: Cargo.toml
modules/ip_macro/src/: lib.rs
modules/linux-dispatcher/: Cargo.toml
modules/linux-dispatcher/.cargo/: config.toml
modules/linux-dispatcher/src/: main.rs
src/: console_listener.rs  entity.rs  fatal.rs  main.rs  panic_channel.rs  pre.rs  prelude.rs  retrying_client.rs  updater.rs  updaters.rs  util.rs
src/config/: api_fields.rs  dns_source.rs  http.rs  ip_source.rs  listener.rs  misc.rs  mod.rs  time.rs
src/config/dns_source/: wasm.rs
src/config/dns_source/wasm/: pipe.rs
src/config/ip_source/: mod.rs  process.rs
src/config/ip_source/wasm/: driver.rs  mod.rs
src/err/: exit.rs  mod.rs
src/network_listener/: macos.rs  mod.rs  windows.rs
src/network_listener/linux/: dispatcher-locations  dispatcher-name  mod.rs  socket-path
src/network_listener/sys/: macos.rs  mod.rs  windows.rs
src/updater/sys/: mod.rs  windows.rs
