[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
    opt-level = 3
    strip = true
    lto = "fat"
    panic = "unwind"
    codegen-units = 1

[profile.dev]
    opt-level = 0
    debug = true
    panic = "unwind"
    strip = false
    lto = "off"

[dependencies]
tokio                = { version = "1.36.0", features = ["full"] }
futures              = { version = "0.3.30"}
serde                = { version = "1.0.197", features = ["derive", "rc"] }
mimalloc             = { version = "0.1.39", default-features = false }
simdutf8             = { version = "0.1.4", features = ["aarch64_neon", "aarch64_neon_prefetch"] }
simd-json            = { version = "0.13.9", features = ["ahash"] }
toml                 = { version = "0.8.12", features = ["preserve_order"] }
serde_json           = "1.0.114"
heap-array           = "0.1.7"
bytes                = "1.5.0"
thiserror            = "1.0.58"
count_tts            = "0.2.0"
dashmap              = "5.5.3"
anyhow               = "1.0.81"
parking_lot          = "0.12.1"
once_cell            = "1.19.0"
bincode              = "2.0.0-rc.3"
ahash                = "0.8.11"
url                  = "2.5.0"
atoi                 = "2.0.0"

[dependencies.interprocess]
version = "2"
features = ["tokio"]
git = "https://github.com/kotauskas/interprocess.git"

[dependencies.reqwest]
version = "0.12.0"
features = [
    "stream",
    "rustls-tls-native-roots",
    "trust-dns",
    "brotli",
    "default",
    "gzip",
    "json"
]


[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "implement",
    "Win32_System_Com",
    "Win32_System_EventNotificationService",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_NetworkManagement",
    "Win32_Networking",
    "Win32_Networking_WinInet",
    "Win32_Networking_NetworkListManager"
]