[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
    opt-level = 3
    strip = true
    lto = "fat"
    panic = "unwind"
    codegen-units = 1
    incremental = false

[profile.dev]
    opt-level = 0
    incremental = true
    debug = true
    panic = "unwind"
    strip = false
    lto = "off"

[features]
default = []
trace = ["tokio/tracing", "dep:console-subscriber"]

[dependencies]
tokio                 = { version = "1.37.0", features = ["full"] }
futures               = { version = "0.3.30"}
serde                 = { version = "1.0.197", features = ["derive", "rc"] }
simd-json             = { version = "0.13.9", features = ["ahash"] }
anyhow                = { version = "1.0.81", features = ["backtrace"] }
dashmap               = { version = "5.5.3", features = ["inline"] }
simdutf8              = "0.1.4"
toml                  = "0.8.12"
serde_json            = "1.0.115"
bytes                 = "1.6.0"
thiserror             = "1.0.58"
count_tts             = "0.2.0"
parking_lot           = "0.12.1"
once_cell             = "1.19.0"
bincode               = "2.0.0-rc.3"
ahash                 = "0.8.11"
url                   = "2.5.0"
atoi                  = "2.0.0"
arc-swap              = "1.7.1"
notify                = "6.1.1"
notify-debouncer-full = "0.3.1"

console-subscriber = { version = "0.2.0", optional = true }

[dependencies.interprocess]
version = "2"
features = ["tokio"]
git = "https://github.com/kotauskas/interprocess.git"

[dependencies.reqwest]
version = "0.12.2"
default-features = false
features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "stream",
    "rustls-tls-native-roots",
    "brotli",
    "default",
    "gzip",
    "json"
]


[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "implement",
    "Win32_System_Com",
    "Win32_System_EventNotificationService",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_NetworkManagement",
    "Win32_Networking",
    "Win32_Networking_WinInet",
    "Win32_Networking_NetworkListManager"
]


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation      = "0.9.4"
core-foundation-sys  = "0.8.6"
system-configuration = "0.6.0"

[build-dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros", "fs", "io-util"] }