[package]
name = "cloudflare-ddns"
version = "0.2.0"
edition = "2021"

[profile.release]
    opt-level = 3
    strip = true
    lto = "fat"
    panic = "unwind"
    codegen-units = 1
    incremental = false

[profile.linux-dispatcher]
    inherits = "release"
    opt-level = 'z'
    strip = true
    lto = "fat"
    panic = "abort"
    codegen-units = 1
    incremental = false

[profile.dev]
    opt-level = 0
    incremental = true
    debug = true
    panic = "unwind"
    strip = false
    lto = "off"

[workspace]
resolver = "2"
members = [
    ".",
    "modules/linux-dispatcher",
    "modules/ip_macro",
]

[features]
default = []
dev-build = []
trace = ["tokio/tracing", "dep:console-subscriber"]


[dependencies]
tokio                 = { version = "1.40.0", features = ["full"] }
futures               = { version = "0.3.30"}
serde                 = { version = "1.0.210", features = ["derive", "rc"] }
anyhow                = { version = "1.0.89", features = ["backtrace"] }
ip_macro              = { version = "*", path = "./modules/ip_macro" }
console-subscriber    = { version = "0.4.0", optional = true }
clap                  = { version = "4.5.18", features = ["derive"] }
simdutf8              = "0.1.5"
toml                  = "0.8.19"
serde_json            = "1.0.128"
bytes                 = "1.7.0"
thiserror             = "1.0.65"
ahash                 = "0.8.11"
url                   = "2.5.2"
arc-swap              = "1.7.1"
notify                = "6.1.1"
notify-debouncer-full = "0.3.1"
idna                  = "1.0.2"

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = [
    "charset",
    "http2",
    "hickory-dns",
    "macos-system-configuration",
    "stream",
    "rustls-tls-native-roots",
    "brotli",
    "zstd",
    "deflate",
    "default",
    "gzip",
    "json"
]

[target.'cfg(windows)'.dependencies]
windows-core = "0.58.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", features = ["futures"] }
dbus-tokio = "0.7.6"
simple_logger = { version = "5.0.0", features = ["colors", "threads", "timestamps", "stderr"] }
systemd-journal-logger = "2.1.1"
log = "0.4.21"
tempfile = "3.13.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["user"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "implement",
    "Win32_System_Com",
    "Win32_System_EventNotificationService",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_NetworkManagement",
    "Win32_Networking",
    "Win32_Networking_WinInet",
    "Win32_Networking_NetworkListManager"
]


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation      = "0.10.0"
core-foundation-sys  = "0.8.6"
system-configuration = "0.6.1"

[build-dependencies]
tokio = { version = "1.40.0", features = ["rt", "macros", "fs", "io-util", "process"] }
